--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,121 @@
-<p>header works!</p>
+<nav class="flex items-center flex-wrap bg-gray-800 py-2 lg:px-12">
+  <div class="@container text-white">
+    <div
+      class="w-320 flex items-center justify-between flex-wrap py-1 lg:px-12"
+    >
+      <div class="pl-3.5">
+        <a class="text-white" href="https://es-la.facebook.com/" target="_blank"
+          ><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i
+        ></a>
+        <a class="text-white" href="https://www.instagram.com/" target="_blank"
+          ><i class="fab fa-instagram fa-sm fa-fw me-2"></i
+        ></a>
+        <a class="text-white" href="https://twitter.com/" target="_blank"
+          ><i class="fa-brands fa-x-twitter fa-sm fa-fw me-2"></i
+        ></a>
+        <a class="text-white" href="#" target="_blank"
+          ><i class="fa-brands fa-whatsapp fa-sm fa-fw"></i
+        ></a>
+      </div>
+      <div class="flex items-center justify-between flex-wrap py-1 lg:px-12">
+        <a
+          class="navbar-xs-btn text-white text-decoration-none me-2 text-sm hover:text-red-300"
+          href="#"
+          >Crear cuenta |
+        </a>
+        <a
+          class="navbar-xs-btn text-white text-decoration-none me-2 text-sm hover:text-red-300"
+          href="#"
+        >
+          Iniciar sesion</a
+        >
+      </div>
+    </div>
+  </div>
+</nav>
+<nav
+  class="flex items-center justify-between flex-wrap bg-white py-2 lg:px-12 shadow"
+>
+  <div
+    class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-100 pb-5 lg:pb-0"
+  >
+    <div *ngIf="isOpen" class="flex items-center flex-shrink-0 w-18">
+      <a href="#"><img src="logo_cherry.png" alt="logo_cherry"/></a>
+    </div>
+    <div (click)="toggleMenu()" class="block lg:hidden">
+      <button
+        id="nav"
+        class="flex items-center px-3 py-2 border-2 rounded text-gray-950 border-gray-950 hover:text-red-300 hover:border-red-300"
+      >
+        <svg
+          class="fill-current h-3 w-3"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <title>Menu</title>
+          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+        </svg>
+      </button>
+    </div>
+  </div>
+
+  <div
+    [ngClass]="{
+      'hidden': !isMenuOpen,
+      'block': isMenuOpen
+    }"
+    class="menu w-full lg:block flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8 text-center"
+  >
+    <div class="text-md text-gray-950 lg:flex-grow">
+      <a
+        href="#"
+        class="block mt-4 lg:inline-block lg:mt-0 px-4 py-2 rounded mr-2 ml-6 hover:text-red-300"
+      >
+        Home
+      </a>
+      <a
+        href="#"
+        class="block mt-4 lg:inline-block lg:mt-0 px-4 py-2 rounded mr-2 ml-6 hover:text-red-300"
+      >
+        Products
+      </a>
+      <a
+        href="#"
+        class="block mt-4 lg:inline-block lg:mt-0 px-4 py-2 rounded mr-2 ml-6 hover:text-red-300"
+      >
+        Contact
+      </a>
+    </div>
+    <!-- This is an example component -->
+    <div class="relative mx-auto text-gray-600 lg:block hidden">
+      <input
+        class="border-1 border-gray-300 bg-white h-9 pl-2 pr-8 rounded-3xl text-sm focus:outline-none"
+        type="search"
+        name="search"
+        placeholder="Search"
+      />
+      <button type="submit" class="absolute right-2 top-0 mt-3 mr-">
+        <svg
+          class="text-red-300 h-4 w-4 fill-current"
+          xmlns="http://www.w3.org/2000/svg"
+          version="1.1"
+          id="Capa_1"
+          x="0px"
+          y="0px"
+          viewBox="0 0 56.966 56.966"
+          style="enable-background: new 0 0 56.966 56.966;"
+          xml:space="preserve"
+          width="512px"
+          height="512px"
+        >
+          <path
+            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"
+          />
+        </svg>
+      </button>
+    </div>
+    <div class="relative mx-auto p-4 text-red-300 lg:block hidden">
+      <a href="#"><i class="fa-solid fa-cart-plus text-lg"></i></a>
+    </div>
+  </div>
+</nav>
