--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,34 +1,36 @@
 <nav class="flex items-center flex-wrap bg-gray-800 py-2 lg:px-12">
-  <div class="@container text-white">
-    <div
-      class="w-335 flex items-center justify-between flex-wrap py-1 lg:px-12"
-    >
-      <div class="pl-3.5">
-        <a class="text-white" href="https://es-la.facebook.com/" target="_blank"
-          ><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i
-        ></a>
-        <a class="text-white" href="https://www.instagram.com/" target="_blank"
-          ><i class="fab fa-instagram fa-sm fa-fw me-2"></i
-        ></a>
-        <a class="text-white" href="https://twitter.com/" target="_blank"
-          ><i class="fa-brands fa-x-twitter fa-sm fa-fw me-2"></i
-        ></a>
-        <a class="text-white" href="#" target="_blank"
-          ><i class="fa-brands fa-whatsapp fa-sm fa-fw"></i
-        ></a>
-      </div>
-      <div class="flex items-center justify-between flex-wrap py-1 lg:px-12">
-        <a
-          class="navbar-xs-btn text-white text-decoration-none me-2 text-sm hover:text-red-300"
-          href="#"
-          >Crear cuenta |
-        </a>
-        <a
-          class="navbar-xs-btn text-white text-decoration-none me-2 text-sm hover:text-red-300"
-          href="#"
-        >
-          Iniciar sesion</a
-        >
+  <div class="@container text-white w-full">
+    <div class="w-300 py-1 lg:px-12">
+      <!-- Container principal desktop -->
+      <div class="flex flex-col lg:flex-row lg:justify-between lg:items-center pl-2.5">
+        <div class="flex items-center mb-2 lg:mb-0">
+          <a class="text-white" href="https://es-la.facebook.com/" target="_blank">
+            <i class="fab fa-facebook-f fa-sm fa-fw me-2"></i>
+          </a>
+          <a class="text-white" href="https://www.instagram.com/" target="_blank">
+            <i class="fab fa-instagram fa-sm fa-fw me-2"></i>
+          </a>
+          <a class="text-white" href="https://twitter.com/" target="_blank">
+            <i class="fa-brands fa-x-twitter fa-sm fa-fw me-2"></i>
+          </a>
+          <a class="text-white" href="#" target="_blank">
+            <i class="fa-brands fa-whatsapp fa-sm fa-fw"></i>
+          </a>
+        </div>
+        <div class="flex items-center">
+          <a
+            class="text-white text-decoration-none me-2 text-sm"
+            [routerLink]="['/']"
+          >
+            Crear cuenta |
+          </a>
+          <a
+            class="text-white text-decoration-none me-2 text-sm"
+            [routerLink]="['/']"
+          >
+            Iniciar sesión
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -40,7 +42,7 @@
     class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-100 pb-5 lg:pb-0"
   >
     <div *ngIf="isOpen" class="flex items-center flex-shrink-0 w-18">
-      <a href="#"><img src="logo_cherry.png" alt="logo_cherry"/></a>
+      <a routerLink=""><img src="logo_cherry.png" alt="Logo" width="150" height="100"/></a>
     </div>
     <div (click)="toggleMenu()" class="block lg:hidden">
       <button
@@ -68,19 +70,20 @@
   >
     <div class="text-md text-gray-950 lg:flex-grow">
       <a
-        href="#"
+        [routerLink]="['/']"
+        [routerLinkActive]="['active']"
         class="block mt-4 lg:inline-block lg:mt-0 px-4 py-2 rounded mr-2 ml-6 hover:text-red-300"
       >
         Home
       </a>
       <a
-        href="#"
+        [routerLink]="['/products']"
         class="block mt-4 lg:inline-block lg:mt-0 px-4 py-2 rounded mr-2 ml-6 hover:text-red-300"
       >
         Products
       </a>
       <a
-        href="#"
+        [routerLink]="['/contact']"
         class="block mt-4 lg:inline-block lg:mt-0 px-4 py-2 rounded mr-2 ml-6 hover:text-red-300"
       >
         Contact
@@ -114,8 +117,10 @@
         </svg>
       </button>
     </div>
-    <div class="relative mx-auto p-4 text-red-300 lg:block hidden">
+    <div class="relative mx-auto p-2 text-red-300 lg:block">
       <a href="#"><i class="fa-solid fa-cart-plus text-lg"></i></a>
     </div>
+    <div class="relative mx-auto p-2 text-red-300 lg:block logOut">
+    <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i></a></div>
   </div>
 </nav>
