--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -2,12 +2,22 @@
   <div class="@container text-white w-full">
     <div class="w-300 py-1 lg:px-12">
       <!-- Container principal desktop -->
-      <div class="flex flex-col lg:flex-row lg:justify-between lg:items-center pl-2.5">
+      <div
+        class="flex flex-col lg:flex-row lg:justify-between lg:items-center pl-2.5"
+      >
         <div class="flex items-center mb-2 lg:mb-0">
-          <a class="text-white" href="https://es-la.facebook.com/" target="_blank">
+          <a
+            class="text-white"
+            href="https://es-la.facebook.com/"
+            target="_blank"
+          >
             <i class="fab fa-facebook-f fa-sm fa-fw me-2"></i>
           </a>
-          <a class="text-white" href="https://www.instagram.com/" target="_blank">
+          <a
+            class="text-white"
+            href="https://www.instagram.com/"
+            target="_blank"
+          >
             <i class="fab fa-instagram fa-sm fa-fw me-2"></i>
           </a>
           <a class="text-white" href="https://twitter.com/" target="_blank">
@@ -20,13 +30,13 @@
         <div class="flex items-center">
           <a
             class="text-white text-decoration-none me-2 text-sm"
-            [routerLink]="['/']"
+            [routerLink]="['/register']"
           >
             Crear cuenta |
           </a>
           <a
             class="text-white text-decoration-none me-2 text-sm"
-            [routerLink]="['/']"
+            [routerLink]="['/login']"
           >
             Iniciar sesión
           </a>
@@ -42,7 +52,9 @@
     class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-100 pb-5 lg:pb-0"
   >
     <div *ngIf="isOpen" class="flex items-center flex-shrink-0 w-18">
-      <a routerLink=""><img src="logo_cherry.png" alt="Logo" width="150" height="100"/></a>
+      <a routerLink="">
+        <img src="logo_cherry.png" alt="Logo" width="150" height="100" />
+      </a>
     </div>
     <div (click)="toggleMenu()" class="block lg:hidden">
       <button
@@ -121,6 +133,7 @@
       <a href="#"><i class="fa-solid fa-cart-plus text-lg"></i></a>
     </div>
     <div class="relative mx-auto p-2 text-red-300 lg:block logOut">
-    <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i></a></div>
+      <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+    </div>
   </div>
 </nav>
