--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,63 @@
-<p>register works!</p>
+<!-- component Register -->
+<div
+  class="relative flex min-h-screen text-gray-700 antialiased flex-col justify-center overflow-hidden bg-blue-100 py-6 sm:py-12"
+>
+  <div
+    class="relative py-3 sm:w-96 mx-auto py-6 text-center bg-white shadow-md rounded-lg p-4"
+  >
+    <span class="text-2xl font-semibold">Register</span>
+    <div class="mt-4 text-left">
+      <div class="h-2 rounded-t-md"></div>
+      <form [formGroup]="registerForm" (ngSubmit)="onRegister()"class="px-8 py-5">
+        <label class="block font-semibold"> Name </label>
+        <input
+          formControlName="fullName"
+          type="text"
+          placeholder="Fullname"
+          class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-gray-300 focus:ring-1 rounded-md shadow-xl"
+        />
+        <label class="block font-semibold"> Email </label>
+        <input
+          formControlName="email"
+          type="text"
+          placeholder="Email"
+          class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-gray-300 focus:ring-1 rounded-md shadow-xl"
+        />
+        <label class="block font-semibold"> Telephone(optional) </label>
+        <input
+          formControlName="telephone"
+          type="tel"
+          placeholder="Telephone"
+          class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-gray-300 focus:ring-1 rounded-md shadow-xl"
+        />
+        <label class="block mt-3 font-semibold"> Password </label>
+        <input
+          formControlName="password"
+          type="password"
+          placeholder="Password"
+          class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-gray-300 focus:ring-1 rounded-md shadow-xl"
+        />
+        <label class="block mt-3 font-semibold"> Confirm password </label>
+        <input
+          formControlName="confirmPassword"
+          type="password"
+          placeholder="Confirm password"
+          class="border w-full h-5 px-3 py-5 mt-2 hover:outline-none focus:outline-none focus:ring-gray-300 focus:ring-1 rounded-md shadow-xl"
+        />
+        <div class="flex justify-between items-baseline py-2">
+          <button
+            type="submit"
+            class="mt-4 bg-red-300 py-1 px-6 rounded-md hover:bg-blue-100 text-gray-700 font-semibold"
+          >
+            Register
+          </button>
+        </div>
+        <div class="flex mt-6">
+          <a href="#" class="text-sm hover:underline" [routerLink]="['/login']"
+            >Already have an account? Sign in</a
+          >
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
