--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,1 +1,4 @@
-<p>products works!</p>
+<!-- component products-->
+<div class="flex justify-center items-center min-h-screen p-4">
+<app-product-list/>
+</div>
