moodificaciones en la interface de product

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,8 +1,10 @@
 <div class="max-w-[1100px] w-full mx-auto">
   <!-- Grid de productos -->
-  <div
-    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
-  >
-    <app-product-list-item />
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+    <!-- Recorre la lista de productos y pasa cada uno a product-list-item -->
+    <app-product-list-item 
+      *ngFor="let product of products" 
+      [product]="product">
+    </app-product-list-item>
   </div>
 </div>
