--- a/src/app/pages/products/product.component.html
+++ b/src/app/pages/products/product.component.html
@@ -1,4 +1,4 @@
 <!-- component products-->
-<section class="flex justify-center items-center min-h-screen p-4">
+<section class="flex justify-center items-center min-h-screen p-4 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
   <app-product-list />
 </section>
