--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -53,26 +53,19 @@
   >
     <div *ngIf="isOpen" class="flex items-center flex-shrink-0 w-18">
       <a routerLink="">
-        <img src="logo_cherry.png" alt="Logo" class="logo"/>
+        <img src="logo_cherry.png" alt="Logo" class="logo" />
       </a>
     </div>
+
     <div (click)="toggleMenu()" class="block lg:hidden">
       <button
         id="nav"
         class="flex items-center px-3 py-2 border-2 rounded text-gray-950 border-gray-950 hover:text-red-300 hover:border-red-300"
       >
-        <svg
-          class="fill-current h-3 w-3"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <title>Menu</title>
-          <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
-        </svg>
+        <i class="fas fa-bars text-sm"></i>
       </button>
     </div>
   </div>
-
   <div
     [ngClass]="{
       'hidden': !isMenuOpen,
@@ -101,7 +94,7 @@
         Contact
       </a>
     </div>
-    <!-- This is an example component -->
+    <!-- Search -->
     <div class="relative mx-auto text-gray-600 lg:block hidden">
       <input
         class="border-1 border-gray-300 bg-white h-9 pl-2 pr-8 rounded-3xl text-sm focus:outline-none"
@@ -109,29 +102,18 @@
         name="search"
         placeholder="Search"
       />
-      <button type="submit" class="absolute right-2 top-0 mt-3 mr-">
-        <svg
-          class="text-red-300 h-4 w-4 fill-current"
-          xmlns="http://www.w3.org/2000/svg"
-          version="1.1"
-          id="Capa_1"
-          x="0px"
-          y="0px"
-          viewBox="0 0 56.966 56.966"
-          style="enable-background: new 0 0 56.966 56.966;"
-          xml:space="preserve"
-          width="512px"
-          height="512px"
-        >
-          <path
-            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"
-          />
-        </svg>
+      <button
+        type="submit"
+        class="absolute right-2 top-1/2 transform -translate-y-1/2"
+      >
+        <i class="fas fa-search text-red-300 text-sm"></i>
       </button>
     </div>
+    <!--Cart-->
     <div class="relative mx-auto p-2 text-red-300 lg:block">
       <a href="#"><i class="fa-solid fa-cart-plus text-lg"></i></a>
     </div>
+
     <div class="relative mx-auto p-2 text-red-300 lg:block logOut">
       <a href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
     </div>
