--- a/src/app/shared/store-services/store-services.component.html
+++ b/src/app/shared/store-services/store-services.component.html
@@ -11,7 +11,7 @@
   >
     @for (icon of icons; track icon.title){
     <div
-      class="p-10 flex flex-col items-center text-center group md:lg:xl:border-r md:lg:xl:border-b hover:bg-slate-50 cursor-pointer"
+      class="p-10 flex flex-col items-center text-center"
     >
       <i [class]="icon.imgIcon + ' text-5xl mb-4 text-red-300' "></i>
       <p class="text-xl font-medium text-slate-700 mt-3">
@@ -20,4 +20,5 @@
     </div>
     }
   </div>
+  
 </section>
