--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -1,3 +1,12 @@
 :host {
   display: block;
 }
+
+.product-list-title{
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #333;
+  font-weight: 600;
+  margin-top: 20px;
+  text-align: center;
+}
