--- a/src/app/shared/store-services/store-services.component.html
+++ b/src/app/shared/store-services/store-services.component.html
@@ -1,6 +1,6 @@
 <section class="max-w-[1100px] w-full mx-auto">
   <div class="text-center mt-10">
-    <h1 class="text-2xl mb-2">Our Services</h1>
+    <h1 class="service-title">Our Services</h1>
     <p class="text-qxl mb-2">
       Explore all the services we provide to ensure an exceptional and seamless
       shopping experience.
