--- a/src/app/shared/store-services/store-services.component.css
+++ b/src/app/shared/store-services/store-services.component.css
@@ -1,3 +1,10 @@
 :host {
   display: block;
 }
+
+.service-title {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: #333;
+  font-weight: 600;
+}
