--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,12 +1,23 @@
 <div class="max-w-[1100px] w-full mx-auto">
-  <h2 class="product-list-title">Products</h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-    @for (product of products; track product._id) {
-    <app-product-list-item 
-      [product]="product"
-      [showStars]="showStars"
-      [showButtons]="showButtons">
-    </app-product-list-item>
+  @if (title()) {
+    <h2 class="product-list-title">{{ title() }}</h2>
+  } @else {
+    <h2 class="product-list-title">Products</h2>
+  }
+  
+  <div
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
+  >
+    @for (product of products(); track product._id) {
+      <app-product-list-item
+        [product]="product"
+        [showButtons]="showButtons()"
+        [showStars]="showStars()"
+        (productDetailRequested)="onProductDetailRequested($event)"
+        (addToCartRequested)="onAddToCartRequested($event)"
+        (buyNowRequested)="onBuyNowRequested($event)"
+      >
+      </app-product-list-item>
     } @empty {
       <p>No se encontraron productos.</p>
     }
